rename to NullErlangAI, split c stub and erlang code in spearate projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 set(mySourceDirRel         "src") # Common values are "" or "src"
 set(additionalSources      "")
 set(additionalCompileFlags "-Ierl_interface/include")
-set(additionalLibraries    ${Cpp_AIWRAPPER_TARGET} CUtils "-L${CMAKE_SOURCE_DIR}/AI/Skirmish/TccAI/erl_interface/lib" "erl_interface" "ei" "nsl")
+set(additionalLibraries    ${Cpp_AIWRAPPER_TARGET} CUtils "-L${CMAKE_SOURCE_DIR}/AI/Skirmish/NullErlangAI/erl_interface/lib" "erl_interface" "ei" "nsl")
 
 
 if    (BUILD_Cpp_AIWRAPPER)
@@ -16,5 +16,5 @@ if    (BUILD_Cpp_AIWRAPPER)
 	endif()
 	ConfigureNativeSkirmishAI(mySourceDirRel additionalSources additionalCompileFlags additionalLibraries)
 else  (BUILD_Cpp_AIWRAPPER)
-    message ("warning: TccAI will not be built! (missing Cpp Wrapper)")
+    message ("warning: NullErlangAI will not be built! (missing Cpp Wrapper)")
 endif (BUILD_Cpp_AIWRAPPER)
