--- a/build
+++ b/build
@@ -16,7 +16,7 @@ ln -sf $ERL_INTERFACE_DIR erl_interface
 (
     cd ../../..
     cmake -DCMAKE_INSTALL_PREFIX=$SPRING_DIR -DAI_TYPES="NATIVE" .
-    make install
+    make install-spring
 )
 
 (
